# World_CPP

./: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  CMakeLists.txt  Coordinates.h  Dandelion.cpp  Dandelion.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Human.cpp  Human.h  Item.h  List.h  Organism.cpp  Organism.h  PineBorscht.cpp  PineBorscht.h  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  String.cpp  String.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h  Wolfberries.cpp  Wolfberries.h  World.cpp  World.h  main.cpp  save.txt
