cmake_minimum_required(VERSION 3.25)
project(World)

set(CMAKE_CXX_STANDARD 17)

add_executable(World main.cpp World.cpp World.h Organism.cpp Organism.h Coordinates.h Animal.cpp Animal.h Animal.h List.h Item.h String.h String.cpp Human.cpp Human.h Wolf.cpp Wolf.h Sheep.cpp Sheep.h Fox.cpp Fox.h Turtle.cpp Turtle.h Antelope.cpp Antelope.h Plant.cpp Plant.h Grass.cpp Grass.h Dandelion.cpp Dandelion.h Guarana.cpp Guarana.h Wolfberries.cpp Wolfberries.h PineBorscht.cpp PineBorscht.h)
